[workspace]

members = [
  "base64", "ciphers",
  "fixed_xor"
]
resolver = "2"

[profile.release]

opt-level = 3         # All optimizations
strip = "symbols"     # Strip symbols from a binary
lto = true            # Attempts to perform optimizations across all crates within the dependency graph
panic = "abort"       # Terminate the process upon panic
codegen-units = 1     # Controls how many “code generation units” a crate will be split into
debug = false
